Modificacion de palabras

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
     <footer id="footer">
       <div class="inner">
         <section>
-          <h2>¡Contacta con nosotros para sugerir nuevos juegos para MSX!</h2>
+          <h2>¡Contacta con nosotros para sugerir nuevos cambios para la pagina</h2>
           <form method="POST" action="http://www2.gonzalonazareno.org/josedom/resultado.php">
             <div class="fields">
               <div class="field half">
