--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -15,7 +15,7 @@
                 <span class="image">
                     <img src="static/imagenes/pagina-cartas.jpg" alt="Imagen Hearthstone">
                 </span>
-                <a href="/todas_cartas">
+                <a href="/todas_cartas/1">
                     <h2>Ver todas las cartas del juego</h2>
                 </a>
             </article>
