Añadida ruta buscador de nuestra pagina, cambios varios en base y en inicio

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,13 +25,13 @@
           <form method="POST" action="http://www2.gonzalonazareno.org/josedom/resultado.php">
             <div class="fields">
               <div class="field half">
-                <input type="text" name="Nombre" id="Nombre_form" placeholder="Nombre" required />
+                <input type="text" name="Nombre" id="Nombre_form" placeholder="Nombre"  />
               </div>
               <div class="field half">
-                <input type="text" name="Apellidos" id="Apellidos_form" placeholder="Apellidos" required />
+                <input type="text" name="Apellidos" id="Apellidos_form" placeholder="Apellidos"  />
               </div>
               <div class="field">
-                <input type="email" name="email" id="email" placeholder="Email" required />
+                <input type="email" name="email" id="email" placeholder="Email"  />
               </div>
               <div class="field">
                 <textarea name="message" id="Mensaje_sugerir" placeholder="¿Qué nos sugieres?"></textarea>
