--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -20,6 +20,7 @@
                 </a>
             </article>
         </section>
+        <a href="/buscador_cartas">prueba</a>
     </div>
 </div>
 {% endblock %}
