Añadido el enlace hacia el buscador.

--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -19,8 +19,15 @@
                     <h2>Ver todas las cartas del juego</h2>
                 </a>
             </article>
+            <article>
+                <span class="image">
+                    <img src="static/imagenes/hearthstone-buscador.jpg" alt="Imagen buscador">
+                </span>
+                <a href="/buscador_cartas">
+                    <h2>Buscador</h2>
+                    </a>
+            </article>
         </section>
-        <a href="/buscador_cartas">prueba</a>
     </div>
 </div>
 {% endblock %}
