Añadida mejoras varias

--- a/templates/detalles.html
+++ b/templates/detalles.html
@@ -33,7 +33,7 @@
             
             <h4>Descripcion de carta: {{doc_detalles.flavorText}}</h4>
 
-            <p><a href="/todas_cartas/1">Volver a las cartas</a></p>
+            <h5><a href="/todas_cartas/1">Volver a las cartas</a>---<a href="/">Volver al inicio</a>---<a href="/buscador_cartas">Volver al buscador</a></h5>
 
 
         </header>
