--- a/templates/todas-cartas.html
+++ b/templates/todas-cartas.html
@@ -6,7 +6,7 @@
         <header>
             <h1>Sobre Hearthstone</h1>
             <p>
-                En la siguiente seccion de nuestra pagina podrá encontrar toda la colección de cartas que se encuentran en el juego, si quiere hacer una busqueda mas simplificada solo debe gacer el click aqui
+                En la siguiente seccion de nuestra pagina podrá encontrar toda la colección de cartas que se encuentran en el juego, si quiere hacer una busqueda mas simplificada solo debe hacer <a href="/buscador_cartas">click aqui</a>
             </p>
         </header>
 
