Añadidas mejoras al programa

--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -7,7 +7,7 @@
             <h1>Sobre Hearthstone</h1>
             <p>
                 En esta pagina vamos a encontrar informacion acerca del videojuego de cartas desarrollado por Blizzard llamado Hearthstone.
-                Aqui vamos a poder encontrar todas las cartas que hay en el juego, incluyendo heroes, hechizos, esbirros... A continuacion tienes 3 opciones distintas para ver las cartas de Hearthstone:
+                Aqui vamos a poder encontrar todas las cartas que hay en el juego, incluyendo heroes, hechizos, esbirros... 
             </p>
         </header>
         <section class="tiles">
